# lightly_engineered

./: .gitignore  LICENSE  README.md  mesh.msh  pyproject.toml
outputs/: mzm_sweep.json  phase_shifter_compact.json  phase_shifter_compact_from_solver_files.json
posts/: _quarto.yml  index.qmd
posts/posts/: mzm-system-design.qmd
scripts/: devsim_pn_sweep.py  run_cross_section.py  show_mzm.py
src/lightly_engineered/: cli.py  config.py
src/lightly_engineered/layout/: mzm.py  phase_shifter.py
src/lightly_engineered/models/: mzm.py  phase_shifter.py  tline.py
src/lightly_engineered/pdk/: cells.py  cross_sections.py  layer_stack.py  layers.py
src/lightly_engineered/sim/: __init__.py  electrostatics.py  optical_modes.py  tcad.py
src/lightly_engineered/workflows/: build_compact_model.py  sweep_mzm.py
tests/: test_layout.py
tutorials/: mesh.msh  silicon_mzm.ipynb  silicon_mzm.md
tutorials/outputs/: phase_shifter_compact.json
